Fixed the bug, where the login form was mis-aligned because of recent increase in size, by reducing the label size.

--- a/store/css/admin.css
+++ b/store/css/admin.css
@@ -57,8 +57,8 @@ nav li.category > a {
   border: 0;
   background: white;
 }
-.login_form {
-  padding: 5px 20px;
+.login-page .form label {
+  min-width: 100px;
 }
 
 /* brands */
